--- a/starwars-opgave/package.json
+++ b/starwars-opgave/package.json
@@ -14,6 +14,7 @@
     "graphql-request": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "sass": "^1.68.0"
   },
